<resources>
    <string name="app_name">HowLongYouPlay</string>
    <string name="welcome_to_gamelog">Chào mừng tới HowLongYouPlay</string>
    <string name="login">Đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="username">Tên người dùng</string>
    <string name="register">Đăng ký</string>


    <string name="icon_app">IconApp</string>
    <string name="year">Năm phát hành: %1$s</string>
    <string name="played_time_input">nhập thời gian chơi</string>
    <string name="submit_btn">Thêm</string>
    <string name="game_title">Game title</string>
    <string name="title_action">Thêm bản ghi mới</string>
    <string name="check_internet">Ứng dụng cần kết nối mạng, kiểm tra trước khi sử dụng để không làm ảnh hưởng trải nghiệm của bạn</string>
    <string name="start">Bắt đầu</string>
    <string name="list_title">Danh sách game của bạn</string>
    <string name="edit_btn">Nút sửa log</string>
    <string name="delete_btn">Nút xóa Log</string>
    <string name="game">Game</string>
    <string name="time">Thời gian chơi: %1$s</string>
    <string name="played_time">Thời gian chơi: %1$s</string>
    <string name="device">Thiết bị: %1$s</string>
    <string name="status">Tình trạng: %1$s</string>
    <string name="delete">Xóa</string>
    <string name="edit">Sửa</string>
    <string name="card_background">ảnh game thu gọn</string>
    <string name="zero">chưa có</string>
    <string name="statistical_btn">nút thống kê</string>
    <string name="title">Title</string>
    <string name="statistical">thống kê</string>
    <string name="add">Thêm</string>
    <string name="user_name">Tên:</string>
    <string name="user_infor">Mô tả bản thân: </string>
    <string name="gender">Giới tính:</string>
    <string name="not_define">chưa xác định</string>
    <string name="close">đóng</string>
    <string name="developer">Phát triển: %1$s</string>
    <string name="pulisher">Phát hành: %1$s</string>
    <string name="add_date">Ngày thêm: %1$s</string>
    <string name="game_records">Thời gian chơi: %1$s giờ %2$s phút %3$s giây</string>
    <string name="watch_records">xem records</string>
    <string name="zero_value">00</string>
    <string name="format_time">%1$s:%2$s:%3$s</string>
    <string name="status_value">%1$s</string>
    <string name="play_on">Chơi trên: %1$s</string>
    <string name="genre">Thể loại: %1$s</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_modified">Sửa lần cuối: %1$s</string>
    <string name="finished_date">Ngày hoàn thành: %1$s</string>
    <string name="note">Ghi chú: %1$s</string>

</resources>
