<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">


    <!--<ImageView
        android:id="@+id/image_game"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@mipmap/p5"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

    </ImageView>-->

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_game"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/gamelog_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/played_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/played_time"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/play_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/status"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/device"
                android:textSize="20sp"
                android:textStyle="bold" />



        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/group_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView">

        <ImageButton
            android:id="@+id/edit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/edit"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/edit_btn">

        </ImageButton>


        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/delete"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/delete_btn">

        </ImageButton>

    </LinearLayout>


</RelativeLayout>
